--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>MovieFinder</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- google fonts link-->
-    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
     <!-- materialze  and  style.css link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- tab icon  and  search icons -->
     <link rel="icon" href="assets/images/pop1.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -24,10 +21,7 @@
     </header>  
     <div class="row">                                      <!-- row to hold movie search form -->
         <div class="col-md-12">
-            <div id="movie-search" class="input-group">
-                <input type="text" class="form-control" id="movieInput" placeholder="Movie search...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" id="goButton" type="button">Go!</button>
+
                 </span>
             </div>
         </div>
@@ -130,9 +124,8 @@
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
     <!-- moment.js  and  materialize js  links-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.min.js"></script> 
-    <!-- <script type="text/javascript" src="assets/js/materialize.min.js"></script> -->
+    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 </body>
 
 </html>
