--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
     <!-- jQuery  and  javascript links -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/config.js"></script>
     <script src="assets/javascript.js"></script>
 
 
