Removed materialize, added space on bottom

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-md-12">
                 <!-- this is for the table that holds the showtimes results  -->
                 <table style="width:100%" id="showtimeTable">
@@ -173,8 +173,7 @@
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
     <!-- moment.js  and  materialize js  links-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.min.js"></script>
-    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.min.js"></script>
 </body>
 
 </html>
