--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                 <div id="movie-button-area"></div>
             </div>
         </div>
+       
+       <!-- Added headers for Movie, Theaters, Showtimes -->
         <div class="row">
             <div class="col-sm-4" id="movie-headers">
                 <h5>Movie:</h5>
